# 20gc-raylib-pong

./: .gitignore  CMakeLists.txt
assets/: logo.aseprite
src/: main.c
